--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  app:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
@@ -23,6 +23,15 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
+
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - api
 
 volumes:
   postgres_data:
